# tic-tac-toe

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  readme.MD
src/: AIPlayer.cpp  AIPlayer.h  GameBoard.cpp  GameBoard.h  GameManager.cpp  GameManager.h  HumanPlayer.h  MainWindow.cpp  MainWindow.h  Player.h  ScoreManager.cpp  ScoreManager.h  main.cpp
